@@ -80,14 +80,13 @@ edited and deleted), exported and imported, used in filters and to generate pass
 
 <table>
 <tbody>
+<tr>
 <td align="center" width="100"><a href="nojs.html" onclick="FR(3445820);return false;">3445820</a></td>
-<td>
-The Edit menu item and entry right-click context menu item "Copy Run Command to
+<td>The Edit menu item and entry right-click context menu item "Copy Run Command to
 Clipboard" will, by default, substitute any variables within the command. To disable this,
 hold down the Ctrl key when selecting these menu items.  The standard menu shortcut cannot
 be used to disable the substitution as the Ctrl key may be used to select a different
-menu item/command.
-</td>
+menu item/command.</td>
 </tr>
 <tr>
 <td align="center" width="100">n/a</td>
@@ -97,7 +96,6 @@ can nolonger import XML files with date time fields in the old PasswordSafe's fo
 See Help file (the XML section of "Import Password Entries") on how to manually change
 the XML file exported prior to V3.26 to allow it to be successfully imported in this release.</td>
 </tr>
-<tr>
 </tbody>
 </table>
 
@@ -106,14 +104,18 @@ the XML file exported prior to V3.26 to allow it to be successfully imported in 
 <table>
 <tbody>
 <tr>
+<td align="center" width="100"><a href="nojs.html" onclick="BR(3468853);return false;">3468853</a></td>
+<td>The number of saved passwords can be changed and after the user presses Apply
+they will no longer be warned that the entry has been changed when pressing Cancel.</td>
+</tr>
+<tr>
 <td align="center" width="100"><a href="nojs.html" onclick="BR(3462520);return false;">3462520</a></td>
-<td>
-A password entry's expiry time in days now correctly reflects the
-expiration date for non-recurring expiration.</tr>
+<td>A password entry's expiry time in days now correctly reflects the
+expiration date for non-recurring expiration.</td>
+</tr>
 <tr>
 <td align="center" width="100"><a href="nojs.html" onclick="BR(3440318);return false;">3440318</a></td>
-<td>
-Filters can now be cleared by double-clicking on the filter indicator in
+<td>Filters can now be cleared by double-clicking on the filter indicator in
 the status bar. Also, Filter Menu correctly changed when a filter is active.</td>
 </tr>
 <tr>
@@ -216,6 +218,7 @@ the status bar. Also, Filter Menu correctly changed when a filter is active.</td
 
 <table>
 <tbody>
+<tr>
 <td align="center" width="100"><a href="nojs.html" onclick="FR(3367590);return false;">3367590</a></td>
 <td>User can now add a database name and description via the Properties diaolg.</td>
 </tr>
@@ -270,7 +273,7 @@ opened.</td>
 </tr>
 <tr>
 <td align="center" width="100"><a href="nojs.html" onclick="BR(3380714);return false;">3380714</a></td>
-<td>User can now save database after manually taking a bakup./td>
+<td>User can now save database after manually taking a bakup.</td>
 </tr>
 <tr>
 <td align="center" width="100"><a href="nojs.html" onclick="BR(3380424);return false;">3380424</a></td>
@@ -305,7 +308,7 @@ preferences via Manage&rarr;Options.</td>
 <td align="center" width="100"><a href="nojs.html" onclick="FR(3288341);return false;">3288341</a></td>
 <td>Autotype has been added to the DragBar. Drag the image to an
 input area on another Window (e.g., Browser) and PasswordSafe will
-begin Autotype from there. </td>
+begin Autotype from there.</td>
 </tr>
 <tr>
 <td align="center" width="100"><a href="nojs.html" onclick="FR(3286721);return false;">3286721</a></td>
@@ -325,7 +328,7 @@ current database's default Autotype string (if set via Manage->Options).</td>
 </tr> 
 <tr>
 <td align="center" width="100"><a href="nojs.html" onclick="FR(2964804);return false;">2964804</a>,<br>
-<a href="nojs.html" onclick="FR(1855389);return false;">1855389</a></td></td>
+<a href="nojs.html" onclick="FR(1855389);return false;">1855389</a></td>
 <td>The user can specify the list of symbols valid for
 password generation, and can override this for any particular
 entry (except when EasyVision or Pronounceable passwords are chosen).</td>
@@ -384,12 +387,14 @@ mechanism to re-check them during import. Exporting to XML and then
 importing to a new database can be used to remove these unknown
 fields.</td>
 </tr>
+<tr>
 <td align="center" width="100">n/a</td>
 <td>Date time fields, when exported to XML, now are in the W3C dateTime
 standard format instead of PasswordSafe's.  This release can import
 XML files with date time fields in either of these forms. The next
 release will only be able to process the W3C standard.</td>
 </tr>
+<tr>
 <td align="center" width="100">n/a</td>
 <td>Fully support importing of TXT files exported from KeePass V1
 including the Group Tree structure, URL and date time fields. Please
@@ -436,8 +441,7 @@ neeeded.</td>
 <tr>
 <td align="center" width="100"><a href="nojs.html" onclick="BR(3088187);return false;">3088187</a></td>
 <td>The correct entry in List View is now used for Autotype when
-using the keyboard to select the entry when PasswordSafe first opens.
-</td>
+using the keyboard to select the entry when PasswordSafe first opens.</td>
 </tr>
 <tr>
 <td align="center" width="100">n/a</td>
